--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 /***** Header *****/
 header {
-    background: #3665af;
+    background: #4267B2;
     padding: 8px 0;
 }
 
@@ -58,7 +58,7 @@ form.form-login {
 .form-element input[type=submit] {
     cursor: pointer;
     border: 0;
-    background: #1969e5;
+    background: #4267B2;
     border: 2px solid #215ab2;
     color: white;
     padding: 3px 5px;
